src/objects/SMS_Seller_Status__c.object
<CustomObject>
    <description>Status of seller in SMS system</description>
    <fields>
        <fullName>RelatedOpportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SMS-Seller-Statuses</relationshipLabel>
        <relationshipName>SMS_Seller_Statuses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Listings_Uploaded__c</fullName>
        <label>Total Listings Uploaded</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Pending_Approval__c</fullName>
        <label>Total Pending Approval</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_QC_Failures__c</fullName>
        <label>Total QC Failures</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_QC_Pass__c</fullName>
        <label>Total QC Pass</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>registration_status__c</fullName>
        <defaultValue>0</defaultValue>
        <label>registration_status</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>seller_id__c</fullName>
        <label>seller_id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>SMS-Seller-Status</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Seller-RegistrationEmail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS-Seller-Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>